@@ -1,4 +1,5 @@
 HEAD
+	+ Create directories in _setConf to avoid invalid group __USERS__ error
 	+ Clean up openchange section in stub smb.conf file
 	+ Fix typo in SambaLdapUser that fixes error in change email
 	+ Change user modification hook from _modifyUser to _preModifyUser
